Style(layout): Corrected the horizontal scroll and margin

--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -1,5 +1,5 @@
 .row {
-  flex-direction: row !important;
+  flex-direction: row;
 }
 .col {
   flex-direction: column;
